--- a/Sephora/home.html
+++ b/Sephora/home.html
@@ -9,8 +9,8 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=person" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0&icon_names=location_on" />
-<title>Sephora homepage</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <title>Sephora homepage</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 
 <body>
@@ -44,7 +44,7 @@
                         <input type="text" class="input-style" placeholder="Search for brands and products">
                     </div>
                     <div class="s-button">
-                            
+
                     </div>
                 </div>
                 <div class="show-text">
@@ -72,50 +72,6 @@
     <div class="img-div">
         <img src="theme-image-india.jpeg">
     </div>
-    <!-- products details div left and right -->
-    <!-- <div class="main">
-        <div class="left-div">
-            <div class="d1">
-                <p>Home / Sol De Janeiro</p>
-            </div>
-            <div class="d2">
-                <p>Skincare</p>
-                <p>Bath and Body</p>
-                <p>Fragrance</p>
-            </div>
-            <div class="d3">
-                <p>CLEAR ALL FILTERS</p>
-
-            </div>
-            <div class="d4">
-                <div class="d4-text">
-                    <p>PRIMARY CATEGORIES</p>
-                </div>
-                <div class="d4-icon"></div>
-            </div>
-            <div class="d5">
-                <div class="d5-text">
-                    <p>PRICE</p>
-                </div>
-                <div class="d5-icon"></div>
-            </div>
-
-            <div class="d6">
-                <div class="d6-text">
-                    <p>PRODUCT TYPE</p>
-                </div>
-                <div class="d6-icon"></div>
-            </div>
-            <div class="back-btn">
-                <div class="back-icon"></div>
-                <div class="back-text">
-                    <p>Back to top</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="right-div"></div>
-    </div> -->
 
 
 
@@ -338,12 +294,24 @@
             </div>
         </div>
         <div class="img-text-border">
-            <div class="img-txt"><p>MAKE UP</p></div>
-            <div class="img-txt"><P>EYEBROWS</P></div>
-            <div class="img-txt"><p>SKINCARE</p></div>
-            <div class="img-txt"><p>FOUNDATION</p></div>
-            <div class="img-txt"><p>FRAGRANCE</p></div>
-            <div class="img-txt"><p>HAIRCARE</p></div>
+            <div class="img-txt">
+                <p>MAKE UP</p>
+            </div>
+            <div class="img-txt">
+                <P>EYEBROWS</P>
+            </div>
+            <div class="img-txt">
+                <p>SKINCARE</p>
+            </div>
+            <div class="img-txt">
+                <p>FOUNDATION</p>
+            </div>
+            <div class="img-txt">
+                <p>FRAGRANCE</p>
+            </div>
+            <div class="img-txt">
+                <p>HAIRCARE</p>
+            </div>
         </div>
     </div>
 
@@ -404,7 +372,7 @@
                 <div class="re-text">
                     <p>RARE BEAUTY</p>
                     <p>Liquid Touch Brightening</p>
-                    <p>concealer  .170W</p>
+                    <p>concealer .170W</p>
                     <p>₹3000</p>
                 </div>
             </div>
@@ -423,7 +391,7 @@
     </div>
 
     <!-- from here we stard footer section -->
-     <div class="footer-border">
+    <div class="footer-border">
         <div class="footer-div1">
             <h5>ABOUT US</h5>
             <p>About Sephora</p>
@@ -500,11 +468,11 @@
                 </div>
             </div>
         </div>
-     </div>
-     <!-- footer bottom copyright text -->
-      <div class="copyright">
+    </div>
+    <!-- footer bottom copyright text -->
+    <div class="copyright">
         <p>© 2024 Sephora India</p>
-      </div>
+    </div>
 </body>
 
 </html>
